--- a/view/Login.view.xml
+++ b/view/Login.view.xml
@@ -18,7 +18,7 @@
 				<Button text="Correctly Displayed" press="onCorrectPathClick"/>
 				<Button text="Loading Error" press="onIncorrectPathClick"/>
 			</FlexBox>
-			<PDFViewer source="http://www.pdf995.com/samples/pdf.pdf" title="{/Title}" height="{/Height}">
+			<PDFViewer source="{/Source}" title="{/Title}" height="{/Height}">
 				<layoutData>
 					<FlexItemData growFactor="1" />
 				</layoutData>
