--- a/view/Login.view.xml
+++ b/view/Login.view.xml
@@ -18,14 +18,14 @@
 				<Button text="Correctly Displayed" press="onCorrectPathClick"/>
 				<Button text="Loading Error" press="onIncorrectPathClick"/>
 			</FlexBox>
-			<PDFViewer source="{/Source}" title="{/Title}" height="{/Height}">
+			<PDFViewer source="https://blog.mozilla.org/security/files/2015/05/HTTPS-FAQ.pdf" title="{/Title}" height="{/Height}">
 				<layoutData>
 					<FlexItemData growFactor="1" />
 				</layoutData>
 			</PDFViewer>
 		</FlexBox>
 	</ScrollContainer>
-			<FlexBox height="1%" alignItems="Center" justifyContent="Center">
+			<!--FlexBox height="1%" alignItems="Center" justifyContent="Center">
 				<items>
 					<VBox class="sapUiSmallMargin">
 						<f:SimpleForm editable="true" id="frmLogin" layout="ResponsiveGridLayout" title="Login" labelSpanL="3" labelSpanM="3" emptySpanL="4" emptySpanM="4" columnsL="1" columnsM="1">
@@ -56,7 +56,7 @@
 						</f:SimpleForm>
 					</VBox>
 				</items>
-			</FlexBox>
+			</FlexBox-->
 		</content>
 	</Page>
 </mvc:View>
